syntax="proto3";

package proto;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetResponse);
}

message User {
  string id = 1;
  string full_name = 2;
  string user_type = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string user_type = 3;
  string password = 4;
  string confirm_password = 5;
}

message RegisterResponse {
  string id = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
}

message GetMeRequest {

}

message GetResponse {
  User user = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  string id = 1;
  string user_type = 2;
}

message GetUserByIdRequest {
  string id = 1;
}
